--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: "Thomas' Bunker"
 
 # Your name to show in the footer
-author: Some Person
+author: Thomas Vetter
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -21,9 +21,9 @@ author: Some Person
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+  #Resources:
+  #  - Beautiful Jekyll: "https://beautifuljekyll.com"
+  #  - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
 
 ################
@@ -50,17 +50,17 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: "@daattali"
-  whatsapp: 15551212
+   email: "thomas.vetter3@gmail.com"
+   rss: true  # remove this line if you don't want to show an RSS link at the bottom
+#  facebook: deanattali
+   github: edzzio
+#  twitter: daattali
+#  patreon: DeanAttali
+#  youtube: "@daattali"
+   whatsapp: +491777703478
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-#  linkedin: daattali
+   linkedin: Thomas Vetter
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -76,7 +76,7 @@ social-network-links:
 #  bluesky: yourname
 #  ORCID: your ORCID ID
 #  google-scholar: your google scholar
-#  discord: "invite_code" or "users/userid" or "invite/invite_code"
+   discord: "Edzzio"
 #  kaggle: yourname
 #  hackerrank: yourname
 #  gitlab: yourname
