--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
    email: "thomas.vetter3@gmail.com"
-   rss: true  # remove this line if you don't want to show an RSS link at the bottom
+   rss: false  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
    github: edzzio
 #  twitter: daattali
@@ -60,7 +60,7 @@ social-network-links:
    whatsapp: +491777703478
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-   linkedin: Thomas Vetter
+   linkedin: https://www.linkedin.com/in/thomas-vetter-283593217/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -102,7 +102,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "[Professional website](https://edzzio.github.io)"
+url-pretty: "edzzio.github.io"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
