--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ social-network-links:
    whatsapp: +491777703478
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
-   linkedin: https://www.linkedin.com/in/thomas-vetter-283593217/
+   linkedin: thomas-vetter-283593217/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
