--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Projects : "projects"
   Vroom : "vroom"
   Resume: "resume"
+  Contact: "contact"
 
 ################
 # --- Logo --- #
@@ -49,7 +50,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-   email: "thomas.vetter3@gmail.com"
+   email: "thomasvet4@gmail.com"
    rss: false  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
    github: edzzio
@@ -116,7 +117,7 @@ feed_show_excerpt: true
 feed_show_tags: true
 
 # Add a search button to the navbar
-post_search: true
+post_search: false
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
 edit_page_button: true
@@ -156,9 +157,9 @@ footer-hover-col: "#FFFFCC"     # Light yellow on hover (optional)
 #page-img: "/assets/img/bgimage.png"
 
 #pagination
-gems: [jekyll-paginate]
-paginate: 5
-paginate_path: "projects/page:num"
+#gems: [jekyll-paginate]
+#paginate: 5
+#paginate_path: "projects/page:num"
 
 ################
 # --- Misc --- #
