--- a/_config.yml
+++ b/_config.yml
@@ -136,18 +136,18 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFC5"
+page-col: "#FCF2EC"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 
 # 🔶 Navbar (yellow)
-navbar-col: "#FFD700"           # Bright yellow (Gold)
+navbar-col: "#FBFFF4"           
 navbar-text-col: "#000000"      # Black text for contrast
 navbar-border-col: "#CCCC00"    # Optional: darker yellow border
 
-# 🔸 Footer (orange)
-footer-col: "#FFA500"           # Orange
+# 🔸 Footer 
+footer-col: "#92C9D5"           
 footer-text-col: "#FFFFFF"      # White text
 footer-link-col: "#FFFFFF"
 footer-hover-col: "#FFFFCC"     # Light yellow on hover (optional)
