--- a/_config.yml
+++ b/_config.yml
@@ -136,18 +136,18 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#9DDAE3"
+page-col: "#3B82F6"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 
 # 🔶 Navbar (yellow)
-navbar-col: "#92C9D5"           
+navbar-col: "#1E3A8A"           
 navbar-text-col: "#000000"      # Black text for contrast
 navbar-border-col: "#CCCC00"    # Optional: darker yellow border
 
 # 🔸 Footer 
-footer-col: "#B6E2E4"           
+footer-col: "#BFDBFE"           
 footer-text-col: "#FFFFFF"      # White text
 footer-link-col: "#FFFFFF"
 footer-hover-col: "#FFFFCC"     # Light yellow on hover (optional)
