--- a/_config.yml
+++ b/_config.yml
@@ -136,24 +136,25 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-# Page background → ultra‑light blue
-page-col:        "#F3F9FF"   # a barely‑there blue tint
+# Page background → ultra‑light green
+page-col:        "#ECFDF5"   # Tailwind green‑50
 
 # Main text & links
-text-col:        "#1F2937"   # dark gray (≈Tailwind gray‑800)
-link-col:        "#1D4ED8"   # strong blue (≈Tailwind blue‑700)
-hover-col:       "#1E40AF"   # deeper blue (≈Tailwind blue‑800)
+text-col:        "#064E3B"   # Tailwind green‑900
+link-col:        "#10B981"   # Tailwind green‑500
+hover-col:       "#059669"   # Tailwind green‑600
 
-# 🔶 Navbar (very pale blue)
-navbar-col:      "#ECF5FF"   # almost white with blue hint
-navbar-text-col: "#1F2937"   # same dark gray for readability
-navbar-border-col: "#93C5FD"  # soft blue‑300 border
+# 🔶 Navbar (slightly deeper green)
+navbar-col:      "#D1FAE5"   # Tailwind green‑100
+navbar-text-col: "#064E3B"   # dark‑green text
+navbar-border-col: "#A7F3D0"  # Tailwind green‑200 border
 
-# 🔸 Footer (virtually white)
-footer-col:      "#FCFEFF"   # nearly pure white with a whisper of blue
-footer-text-col: "#1F2937"   # dark gray
-footer-link-col: "#1D4ED8"   # matching main link color
-footer-hover-col: "#DBEAFE"   # very light blue‑100 on hover
+# 🔸 Footer (near‑white with a hint of green)
+footer-col:      "#F9FFFC"   # almost pure white
+footer-text-col: "#064E3B"   # dark‑green text
+footer-link-col: "#10B981"   # same as link‑col
+footer-hover-col: "#D1FAE5"   # green‑100 on hover
+
 
 
 #navbar-img: "/assets/img/bgimage.png"
